--- a/Sources/Views/CollectionViewCell/EditMenuCollectionViewCell.xib
+++ b/Sources/Views/CollectionViewCell/EditMenuCollectionViewCell.xib
@@ -13,15 +13,37 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="EditMenuCollectionViewCell" customModule="ToonMaker" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="144" height="137"/>
+            <rect key="frame" x="0.0" y="0.0" width="191" height="185"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="144" height="137"/>
+                <rect key="frame" x="0.0" y="0.0" width="191" height="185"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="bbB-SY-8f7">
+                        <rect key="frame" x="0.0" y="0.0" width="191" height="185"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fex-VF-MkP">
+                                <rect key="frame" x="49" y="0.0" width="93" height="98"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YaT-b9-Jcv">
+                                <rect key="frame" x="74.5" y="98" width="42" height="87"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
+                </subviews>
             </view>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="bbB-SY-8f7" secondAttribute="trailing" id="4R7-5D-BSn"/>
+                <constraint firstItem="bbB-SY-8f7" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="6b5-Hh-Xtb"/>
+                <constraint firstAttribute="bottom" secondItem="bbB-SY-8f7" secondAttribute="bottom" id="Adm-md-4Pa"/>
+                <constraint firstItem="bbB-SY-8f7" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Iha-9c-Qhj"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="144" height="137"/>
-            <point key="canvasLocation" x="25" y="-46"/>
+            <size key="customSize" width="191" height="185"/>
+            <point key="canvasLocation" x="48.5" y="-22.5"/>
         </collectionViewCell>
     </objects>
 </document>
