--- a/Sources/Resources/Storyboard/Popover.storyboard
+++ b/Sources/Resources/Storyboard/Popover.storyboard
@@ -59,6 +59,47 @@
             </objects>
             <point key="canvasLocation" x="-7572" y="-1394"/>
         </scene>
+        <!--Layout Sample Popover View Controller-->
+        <scene sceneID="jSy-mV-DAA">
+            <objects>
+                <viewController storyboardIdentifier="LayoutSamplePopoverViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="zRl-jr-qS3" customClass="LayoutSamplePopoverViewController" customModule="ToonMaker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9tq-PR-7UL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Ux6-pN-6tM">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="PiJ-90-0uz">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                                <connections>
+                                    <outlet property="dataSource" destination="zRl-jr-qS3" id="TVK-pE-UfE"/>
+                                    <outlet property="delegate" destination="zRl-jr-qS3" id="8KO-FU-cCh"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Ux6-pN-6tM" firstAttribute="top" secondItem="yfa-bv-JU0" secondAttribute="top" id="BhL-WP-dh2"/>
+                            <constraint firstItem="yfa-bv-JU0" firstAttribute="bottom" secondItem="Ux6-pN-6tM" secondAttribute="bottom" id="Es9-eb-r3d"/>
+                            <constraint firstItem="yfa-bv-JU0" firstAttribute="trailing" secondItem="Ux6-pN-6tM" secondAttribute="trailing" id="bF3-iB-iQv"/>
+                            <constraint firstItem="Ux6-pN-6tM" firstAttribute="leading" secondItem="yfa-bv-JU0" secondAttribute="leading" id="kZG-uV-U7L"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="yfa-bv-JU0"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="Ux6-pN-6tM" id="4zt-AI-row"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="brD-o3-cVA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-7650" y="-881"/>
+        </scene>
         <!--Editor Menu Draw Width Popover View Controller-->
         <scene sceneID="Z7a-Xk-MVp">
             <objects>
