--- a/Sources/Views/CollectionViewCell/EditorMenu/EditorMenuCollectionViewCell.xib
+++ b/Sources/Views/CollectionViewCell/EditorMenu/EditorMenuCollectionViewCell.xib
@@ -21,6 +21,7 @@
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="editor_menu_bubble" translatesAutoresizingMaskIntoConstraints="NO" id="9FY-Sg-1y9">
                         <rect key="frame" x="0.0" y="0.0" width="66" height="53"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </imageView>
                 </subviews>
             </view>
