--- a/Sources/Resources/Storyboard/Base.lproj/Main.storyboard
+++ b/Sources/Resources/Storyboard/Base.lproj/Main.storyboard
@@ -336,8 +336,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HMf-Gv-5QZ">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HMf-Gv-5QZ">
+                                <rect key="frame" x="0.0" y="64" width="414" height="672"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="dataSource" destination="jCl-l7-nEg" id="2ov-rx-Yih"/>
@@ -349,8 +349,8 @@
                         <constraints>
                             <constraint firstItem="HMf-Gv-5QZ" firstAttribute="leading" secondItem="oEf-3r-Ebb" secondAttribute="leading" id="17c-ny-yyh"/>
                             <constraint firstItem="oEf-3r-Ebb" firstAttribute="trailing" secondItem="HMf-Gv-5QZ" secondAttribute="trailing" id="2d9-Pj-uVn"/>
-                            <constraint firstItem="HMf-Gv-5QZ" firstAttribute="top" secondItem="Pkc-Xe-cbE" secondAttribute="top" id="CeV-7b-8wX"/>
                             <constraint firstItem="oEf-3r-Ebb" firstAttribute="bottom" secondItem="HMf-Gv-5QZ" secondAttribute="bottom" id="Ftt-AS-dwf"/>
+                            <constraint firstItem="HMf-Gv-5QZ" firstAttribute="top" secondItem="oEf-3r-Ebb" secondAttribute="top" id="zMj-Uu-sLw"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="oEf-3r-Ebb"/>
                     </view>
@@ -369,7 +369,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DM1-QL-H7g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="433" y="-631"/>
+            <point key="canvasLocation" x="431.8840579710145" y="-631.79347826086962"/>
         </scene>
         <!--허생전-->
         <scene sceneID="cac-bJ-PhG">
